--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"axios": "^0.20.0",
-		"body-parser": "^1.15.2",
-		"chai": "^3.5.0",
-		"chai-http": "^3.0.0",
-		"cors": "^2.8.1",
-		"express": "^4.14.0",
-		"font-awesome": "^4.7.0",
-		"helmet": "^3.1.0",
-		"jquery": "^3.5.1",
-		"mocha": "^3.2.0",
-		"mongoose": "^5.10.7",
-		"zombie": "^5.0.5"
-	},
+		"axios": "^1.6.5",
+		"body-parser": "^1.19.0",
+		"chai": "^4.2.0",
+		"chai-http": "^4.3.0",
+		"co": "^4.6.0",
+		"cors": "^2.8.5",
+		"dotenv": "^8.1.0",
+		"express": "^4.17.1",
+		"helmet": "^3.21.0",
+		"mocha": "^10.2.0",
+		"mongodb": "^3.3.2",
+		"mongoose": "^5.7.10",
+		"node": "^21.2.0"
+	  },
 	"engines": {
-		"node": "4.4.3"
+		"node": "21.2.0"
 	},
 	"repository": {
 		"type": "git",
